<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">P2000 Live</string>
    <string name="loading">Laden…</string>
    <string name="filters">Filters</string>
    <string name="filter_none">Geen filters actief</string>
    <string name="filter_location_hint">Locatie (plaats, straat of postcode)</string>
    <string name="filter_location_helper">Alleen meldingen die deze tekst bevatten</string>
    <string name="filter_radius_title">Straal vanaf mijn locatie</string>
    <string name="filter_clear">Filters wissen</string>
    <string name="radius_off">Uit (geen afstandsfilter)</string>
    <string name="filter_radius_helper">Sleep naar 0 om zonder afstandsfilter te werken</string>
    <string name="filters_voor_buurt">Deze filters gelden voor “In de buurt” en de kaart</string>
    <string name="filters_voor_alles">Deze filters gelden alleen voor “Alles”</string>
    <string name="radius_km">%d km</string>
    <string name="nav_list">In de buurt</string>
    <string name="nav_map">Kaart</string>
    <string name="nav_alles">Alles</string>
    <string name="empty_list">Geen meldingen binnen je straal.\nMeldingen zonder duidelijke locatie staan onder “Alles”.</string>
    <string name="empty_alles">Geen meldingen voor deze filters.\nZet het tijdfilter ruimer om verder terug te kijken.</string>
    <string name="kies_melding">Kies een melding uit de lijst om de details te zien</string>
    <string name="alles_zoek_hint">Zoek in alle meldingen (plaats, straat, dienst, tekst…)</string>
    <string name="location_denied">Locatietoestemming geweigerd – straalfilter uitgeschakeld</string>
    <string name="location_unavailable">Locatie niet beschikbaar – zet locatie aan en probeer opnieuw</string>
    <string name="no_coordinates">Geen kaartpositie bekend voor deze melding</string>
    <string name="theme_toggle">Thema wisselen (systeem / licht / donker)</string>
    <string name="detail_raw_title">Originele pagertekst</string>
    <string name="detail_show_on_map">Toon op kaart</string>
    <string name="detail_open_browser">Meer info</string>
    <string name="detail_aard_onbekend">Aard niet vermeld</string>
    <string name="detail_aard_ambu_privacy">Ambulancemeldingen bevatten om privacyredenen geen medische details</string>
    <string name="detail_prio">Prioriteit: %s</string>
    <string name="detail_locatie">Locatie: %s</string>
    <string name="detail_regio">Regio: %s</string>
    <string name="detail_bron">Bron: %s</string>
    <string name="detail_eenheden">Eenheden: %s</string>
    <string name="detail_dia">Directe inzet ambulance (DIA)</string>
    <string name="group_count">%d meldingen</string>
    <string name="detail_gekoppeld">Gekoppelde meldingen voor dit incident</string>
    <string name="detail_gekoppeld_count">Opgeroepen diensten (%d meldingen)</string>
    <string name="filter_window_title">Historie – hoe ver terugkijken</string>
    <string name="filter_background">Op de achtergrond blijven verversen</string>
    <string name="filter_background_helper">Houdt de historie bij via een stille melding, ook als de app dicht is</string>
    <string name="channel_polling">Achtergrond verversen</string>
    <string name="polling_notification">P2000-meldingen worden bijgehouden</string>
    <string name="window_15m">15 min</string>
    <string name="window_30m">30 min</string>
    <string name="window_1h">1 uur</string>
    <string name="window_3h">3 uur</string>
    <string name="window_6h">6 uur</string>
    <string name="window_12h">12 uur</string>
    <string name="window_24h">24 uur</string>
    <string name="window_48h">48 uur</string>
    <string name="window_72h">72 uur</string>
    <string name="window_1w">1 week</string>
    <string name="stats_line">Cijfers data.politie.nl: in %1$s zijn in %2$s %3$d misdrijven geregistreerd</string>
    <string name="stats_soort">, waarvan %1$d %2$s</string>
    <string name="log_titel">Logboek en diagnose</string>
    <string name="log_kopieren">Kopiëren</string>
    <string name="log_delen">Delen</string>
    <string name="log_gekopieerd">Diagnose gekopieerd naar het klembord</string>
    <string name="crash_title">De app is eerder gecrasht</string>
    <string name="crash_share">Rapport delen</string>
    <string name="crash_dismiss">Sluiten</string>
</resources>
